--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
 // Ici j'importe tous les autres fichiers scss\
 // src/styles/index.scss
 
-// @import 'variables';
-// @import 'mixins';
-// @import 'base';
-// @import 'App';
+@import './styles/variables';
+@import './styles/mixins';
+@import './styles/base';
+@import './app/App';
 
