--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,6 +1,7 @@
 @import '../../styles/mixins';
 
 .footer {
+    width: 100%;
         &__container {
             @include column-center;
             background-color: black;
