--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,8 +2,9 @@
 
 .navbar {
     @include flex-between;
+    width: 100%;
     height: 7vh;
-    margin: 20px 20px 0px 20px;
+    padding: 20px 20px 0px 20px;
 
         &__link {
             @include flex-right;
