--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -3,5 +3,34 @@
 // top: 163px;
 // left: 100px;
 // gap: 0px;
+
+.banner {
+    position: relative;
+    width: 100%;
+    height: 111px;
+    border-radius: 25px 0px 0px 0px;
+    background-image: url('/public/mountains.png');
+    background-size: cover;
+    background-position: center;
+
+        &__overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6); /* Couleur noire avec 60% d'opacité */
+            mix-blend-mode: darken; /* Applique l'effet de fusion */
+            pointer-events: none; /* Permet de cliquer à travers l'overlay */
+
+        }
+
+        &__title {
+            position: relative;
+            z-index: 1;
+            color: white;
+        }
+
+}
 // border-radius: 25px 0px 0px 0px;
 // opacity: 0.6px;
