--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -1,36 +1,28 @@
-// width: 1240px;
-// height: 223px;
-// top: 163px;
-// left: 100px;
-// gap: 0px;
+@import '../../styles/mixins';
 
 .banner {
+    @include flex-left;
     position: relative;
     width: 100%;
     height: 111px;
-    border-radius: 25px 0px 0px 0px;
-    background-image: url('/public/mountains.png');
-    background-size: cover;
-    background-position: center;
+
+        &__img {
+            @include banner-frame;
+            object-fit: cover; /* Pour s'assurer que l'image couvre toute la bannière */
+            z-index: 1; /* S'assurer que l'image est en dessous du contenu */        
+        }
 
         &__overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.6); /* Couleur noire avec 60% d'opacité */
+            @include banner-frame;
+            background-color: rgba(0, 0, 0, 0.6); 
             mix-blend-mode: darken; /* Applique l'effet de fusion */
-            pointer-events: none; /* Permet de cliquer à travers l'overlay */
-
+            z-index: 2;
         }
 
         &__title {
             position: relative;
-            z-index: 1;
-            color: white;
+            z-index: 3;
+            width: 60vw;
         }
 
 }
-// border-radius: 25px 0px 0px 0px;
-// opacity: 0.6px;
