--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -3,7 +3,7 @@
     min-width: 375px;
     max-width: 1440px;
     width: 100vw;
-    // margin: 0 auto;
+    margin: 0 auto;
 
          &__content {
              width: 100%;
