--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -10,9 +10,24 @@
     align-items: center;
   }
 
+  @mixin flex-left {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+
   @mixin column-center {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  @mixin banner-frame {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
   }
