Banner Done ; Home WIP

--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -4,7 +4,7 @@
     @include flex-left;
     position: relative;
     width: 100%;
-    height: 111px;
+    height: 16.634vh; //111px;
 
         &__img {
             @include banner-frame;
