--- a/src/index.scss
+++ b/src/index.scss
@@ -4,5 +4,5 @@
 @import './styles/variables';
 @import './styles/mixins';
 @import './styles/base';
-@import './app/App';
+@import './app/App'; //vide atm
 
