--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,5 @@
+
+// flex
 @mixin flex-between {
     display: flex;
     justify-content: space-between;
@@ -22,6 +24,8 @@
     justify-content: center;
     align-items: center;
   }
+  //flex
+  // Banner
 
   @mixin banner-frame {
     position: absolute;
