--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -25,25 +25,18 @@ a {
     display: block; /* Permet au lien de prendre tout l'espace du <li> */
 }
 
-h1 {
-    color: white;
-    text-align: left;
-    font-size: 24px;
-    font-weight: 700;
-    margin-left: 16px;
-}
 
-h2 { // oups et titre fichelogement
+// h2 { // oups et titre fichelogement
 
-}
+// }
 
-h3 { // liens nav et apropos
+// h3 { // liens nav et apropos
     
-}
+// }
 
-h4 { // titres cards et collapses
+// h4 { // titres cards et collapses
     
-}
+// }
 
 strong {
     font-weight: 700; /* Enlève le gras par défaut */
