--- a/src/pages/APropos.scss
+++ b/src/pages/APropos.scss
@@ -4,7 +4,7 @@
     height: 310px;
     margin: 19px 19.5px; 
 
-        &__collapse-container {
+        &__container {
             @include column-center;
             justify-content: space-between;
             margin: 20px auto;
