--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -20,8 +20,8 @@
             }
             &__btn {
                 @include flex-left;
-                width: 32px;
-                height: 32px;
+                width: 9.515%;
+                min-width: 32px;
                 border: inherit;
                 background-color: inherit;
                 color: inherit;
