--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -10,7 +10,7 @@
         &__container {
             @include flex-between;
             border-radius: 5px;
-            background-color: rgba(255, 96, 96, 1);
+            background-color: $salmon-background;
             color: white;
         }
 
@@ -28,7 +28,7 @@
             }
 
         &__text {
-            background-color: rgba(246, 246, 246, 0.45);
+            background-color: $grey-background;
             font-size: 12px;
             padding: 13px 20px 19px;
         }  
