--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -35,3 +35,10 @@
     height: 100%;
     border-radius: 25px;
   }
+
+  // @mixin collapse-salmon {
+  //   background-color: rgba(255, 96, 96, 1);
+  //   color: white;
+  //   text-align: left;
+  //   line-height: 18.54px;
+  // }
