--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,15 +1,17 @@
 .card-frame {
+    position: relative;
     display: flex;
     justify-content: left;
     align-items: end;
     width: 100%;
     height: 255px;
-    background: 
-    linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%),
-    #FF6060;
+    // background: 
+    // linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%),
+    // #FF6060;
     border-radius: 10px;
 
         &__title {
+            // position: absolute;
             margin-left: 19.7px;
             margin-bottom: 20px;            
         }
