--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -5,9 +5,9 @@
     align-items: end;
     width: 100%;
     height: 255px;
-    // background: 
-    // linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%),
-    // #FF6060;
+    background: 
+    linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%),
+    #FF6060;
     border-radius: 10px;
 
         &__title {
