Affichage Dyn Gallerie WIP

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -4,11 +4,12 @@
     height: 140.56vh; // 938px
     margin: 27px 20px; 
 
-        &__card-container {
+        &__gallery {
             @include column-center;
             justify-content: space-between;
             height: 120.63vh; // 805 px
             margin: 22px auto 27px;
+            overflow-y: scroll;
         }
 }
 // Home page desktop
