--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,6 @@
 $salmon-background: rgba(255, 96, 96, 1);
 
 $grey-background: rgba(246, 246, 246, 0.45);
+
+$card-default-background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%),
+#FF6060;
