--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,21 +1,23 @@
 .card {
     position: relative;
-    display: flex;
-    justify-content: left;
-    align-items: end;
-    width: 100%;
-    height: 255px;
     border-radius: 10px;
+    width: 335px;
+    height: 255px;
 
-        &__img {
+        &__cover {
             object-fit: cover;
-            height: 100%;
             width: 100%;
+            height: 255px; // 100% -> 227px ? -_- 
+            border-radius: 10px;
+            
         }
 
         &__title {
-            // position: absolute;
+            position: absolute;
+            left: 0px;
+            bottom: 0px;
             margin-left: 19.7px;
-            margin-bottom: 20px;            
+            margin-bottom: 20px;
+                      
         }
 }
