--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,34 +1,18 @@
 @import '../styles/mixins';
 
 .home-page {
-    height: 140.56vh; // 938px
-    margin: 27px 20px; 
+    // height: 140.56vh; // 938px
+    width: 100%;
+    margin: 27px 20px;  // 27px auto ?
 
         &__gallery {
-            @include column-center;
-            justify-content: space-between;
-            height: 120.63vh; // 805 px
+            display: flex;
+            flex-direction: column;
+            row-gap: 20px;
+
+            // height: 120.63vh; // 805 px
             margin: 22px auto 27px;
-            overflow-y: scroll;
+
+            // overflow-y: scroll;
         }
 }
-// Home page desktop
-
-// width: Hug (1,440px)px;
-// height: Hug (1,517px)px;
-// top: -743px;
-// left: -543px;
-// padding: 45px 0px 0px 0px;
-// gap: 50px;
-// opacity: 0px;
-
-// background: #FFFFFF;
-
-
-// Conteneur gallerie
-// width: 1240px;
-// height: 829px;
-// gap: 0px;
-// border-radius: 25px 0px 0px 0px;
-// opacity: 0px;
-
