--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -1,11 +1,13 @@
 .gallerie {
 
-    &__container {
-        position: relative;
-        overflow: hidden;
-        width: 100%;
-        height: 255px;
-        border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 255px;
+    border-radius: 10px;
+    align-items: center;
+    text-align: center;
+    color: white;
 
         &__img {
             object-fit: cover;
@@ -15,21 +17,26 @@
 
         &__nav {
             position: absolute;
-
+            top: 50%;
+            width: 100%;
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            
+        
 
             &__btn {
                 height: 24px;
                 width: 24px;
-
+                padding-left: 5px;
+                padding-right: 5px;
             }
         }
+        
         &__index {
             position: absolute;
-            text-align: center;
-
+            bottom: 0px;
+            width: 100%;
+            
         }
     }
-}
+
