--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,7 +4,8 @@
     @include flex-between;
     width: 100%;
     height: 7vh;
-    padding: 20px 20px 0px 20px;
+    padding: 0px 20px;
+    margin-top: 20px;
 
         &__link {
             @include flex-right;
