--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -2,6 +2,7 @@
 
     position: relative;
     overflow: hidden;
+    margin-bottom: 15px;
     width: 100%;
     height: 255px;
     border-radius: 10px;
