--- a/src/pages/FicheLogement.scss
+++ b/src/pages/FicheLogement.scss
@@ -1,9 +1,98 @@
+@import '../styles/variables'; // Probleme de module ; ne trouve pas la stylesheet.
+@import '../styles/mixins';
+
 .logement {
     margin: 20px 27px;
+
+    &__title {
+        color: $salmon-background;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 25.67px;
+        text-align: left;
+        margin-bottom: 5px;
+
+    }
+
+    &__loc {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 19.96px;
+        text-align: left;
+        margin-bottom: 10px;
+    }
+
+    &__tags {
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        column-gap: 10px;
+        flex-wrap: wrap;
+
+        .logement__tag {
+            min-width: 84px;
+            min-height: 18px;
+            line-height: 18px;
+            color: white;
+            background-color: $salmon-background;
+            border-radius: 10px;
+            font-size: 10px;
+            font-weight: 700;           
+            text-align: center;
+            padding: 0px 8px;    
+            margin-bottom: 16px; 
+
+        }
+    }
+    &__review {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        height: 33px;
+        line-height: 33px;
+        
+        .logement__rating {
+            height: 18px;
+            min-width: 98px;
+        }
+
+        .logement__host {
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            column-gap: 10.5px;
+            align-items: center;
+
+            &__name {
+               color: $salmon-background;
+               font-size: 12px;
+               font-weight: 500;
+               line-height: 17.11px;
+               text-align: right;
+               
+            }
+
+            &__img {
+                height: 32px;
+                width: 32px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
+
+
+    }
+    &__collapse {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-top: 13px;
+    }
+
 }
 
 .star-red {
-    color : #FF6060
+    color : $salmon-background;
 
 }
 
