--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -2,8 +2,8 @@
 
 .home-page {
     // height: 140.56vh; // 938px
-    width: 100%;
-    margin: 27px 20px;  // 27px auto ?
+    // width: 100%;
+    margin: 27px 20px;  // 27px auto 
 
         &__gallery {
             display: flex;
