--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 7vh;
     padding: 0px 20px;
-    margin-top: 20px;
+    padding-top: 20px;
 
         &__link {
             @include flex-right;
