--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -8,10 +8,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
   }
 
+html {
+    height: 100%;
+    background-color: white;
+}
+
 body {
-    font-family: 'Montserrat', sans-serif;
+    background-color: black;
+    height: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+
+#root {
+    height: 100%;
 }
 
 ul {
