--- a/src/pages/APropos.scss
+++ b/src/pages/APropos.scss
@@ -2,7 +2,7 @@
 
 .apropos-page {
     // height: 310px;
-    margin: 19px 19.5px; 
+    // margin: 19px 19.5px; 
 
         &__container {
             display: flex;
