--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -3,11 +3,15 @@
     border-radius: 10px;
     width: 335px;
     height: 255px;
+    @media (min-width: 768px) {
+        height: 340px;
+        width: 340px;
+    }
 
         &__cover {
             object-fit: cover;
             width: 100%;
-            height: 255px; // 100% -> 227px ? -_- 
+            height: inherit; // 100% -> 227px ? -_- 
             border-radius: 10px;
             
         }
@@ -20,4 +24,5 @@
             margin-bottom: 20px;
                       
         }
+
 }
