--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -6,6 +6,9 @@
     flex-direction: column;
     text-align: left;
     line-height: 1.426;
+    // @media (min-width: 768px) {
+    //     width: 46.935vw;
+    // }
 
         &__container {
             @include flex-between;
