--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,7 +1,16 @@
 @import '../../styles/mixins';
 
 .footer {
-    width: 100%;
+    width: 100vw;
+    min-width: 375px;
+    margin-top: 27px;
+    transform: translateX(-5.333vw); //20px mobile
+    @media (min-width: 768px) { 
+        transform: translateX(-6.944vw); // 100px desktop
+        max-width: 1440px;
+
+    }
+
         &__container {
             @include column-center;
             background-color: black;
