--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,9 +3,17 @@
 .navbar {
     @include flex-between;
     width: 100%;
-    height: 7vh;
-    padding: 0px 20px;
-    padding-top: 20px;
+    height: 46.88px; // 7vh;
+    @media (min-width: 768px) {
+        height: 68px; 
+        
+    }
+
+        &__logo {
+            @media (min-width: 768px) {
+                max-height: 68px;                
+            }
+        }
 
         &__link {
             @include flex-right;
@@ -16,6 +24,9 @@
             a {
                 margin-left: 26px;
                 color: black;
+                @media (min-width: 768px) {
+                    margin-left: 57px;
+                }
             }
 }
 
