--- a/src/pages/FicheLogement.scss
+++ b/src/pages/FicheLogement.scss
@@ -2,7 +2,13 @@
 @import '../styles/mixins';
 
 .logement {
-    margin: 20px 27px;
+    // margin: 5.333vw 27px;
+
+    @media (min-width: 768px) { 
+        margin: 6.944vw 50px;
+
+    }
+
 
     &__title {
         color: $salmon-background;
@@ -87,6 +93,12 @@
         flex-direction: column;
         row-gap: 20px;
         margin-top: 13px;
+        @media (min-width: 768px) {
+            flex-direction: row; 
+            // justify-content: space-between;
+            column-gap: 5.278vw;
+        }
+        
     }
 
 }
