--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,18 +1,37 @@
 @import '../styles/mixins';
+@import '../styles/variables';
 
 .home-page {
-    // height: 140.56vh; // 938px
-    // width: 100%;
-    margin: 27px 20px;  // 27px auto 
+
+    margin-top: 27px;
+    @media (min-width: 768px) { 
+        margin-top: 50px;
+    }
+
 
         &__gallery {
             display: flex;
             flex-direction: column;
+            align-items: center;
             row-gap: 20px;
 
             // height: 120.63vh; // 805 px
             margin: 22px auto 27px;
 
+            @media (min-width: 768px) {
+                background-color: $grey-background;
+                justify-content: center;
+                flex-direction: row; 
+                flex-wrap: wrap;
+                row-gap: 50px;
+                column-gap: 4.838%; //60px 1440vw
+                padding: 56px 0px 43px 0px;
+                margin: 43px 0px 43px 0px;           
+
+            }
+
             // overflow-y: scroll;
         }
+
+
 }
