--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -14,6 +14,8 @@
 html {
     height: 100%;
     background-color: white;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 body {
@@ -64,6 +66,26 @@ li , p {
     font-weight: 500;
     line-height: 17.11px;
 }
+
+li {
+    @media (min-width: 768px) {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 34.22px;        
+    }
+
+}
+
+p {
+    @media (min-width: 768px) {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 25.67px;     
+    }
+
+}
+
+
 
 
 
