--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -23,7 +23,7 @@
             }
             &__btn {
                 @include flex-left;
-                width: 9.515%;
+                // width: 9.515%;
                 min-width: 32px;
                 border: inherit;
                 background-color: inherit;
