--- a/src/pages/FicheLogement.scss
+++ b/src/pages/FicheLogement.scss
@@ -1,5 +1,15 @@
 @import '../styles/variables'; // Probleme de module ; ne trouve pas la stylesheet.
 @import '../styles/mixins';
+.logement{
+    &__content-flexbox {
+        @media (min-width: 768px) { 
+        display: flex;
+        }
+    }
+    // &__property-flexbox {
+
+    // }        
+}
 
 .logement {
     margin: 27px 0px 27px 0px;
@@ -8,9 +18,6 @@
         margin: 6.944vw 50px;
 
     }
-    // &__content-flexbox {
-        
-    // }
 
 
     &__title {
@@ -76,6 +83,11 @@
         justify-content: space-between;
         height: 33px;
         line-height: 33px;
+        @media (min-width: 768px) { 
+            display: flex;
+            flex-direction: column;
+            justify-content: right;
+        }
 
         
         .logement__rating {
@@ -145,3 +157,5 @@
 .star-grey {
     color: #E3E3E3
 }
+
+
