--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -9,6 +9,9 @@
     align-items: center;
     text-align: center;
     color: white;
+    @media (min-width: 768px) { 
+        height: 415px;
+    }
 
         &__img {
             object-fit: cover;
@@ -22,6 +25,11 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
+            @media (min-width: 768px) { 
+                top: 35.575%;
+            }
+            
+            
             
         
 
@@ -30,6 +38,13 @@
                 width: 24px;
                 padding-left: 5px;
                 padding-right: 5px;
+                font-size: 1.2em;
+                @media (min-width: 768px) { 
+                    font-size: 4.67em;
+                    line-height: 119.64px;
+                    height: 119.64px;
+                    width: 96px;
+                }
             }
         }
         
@@ -37,6 +52,7 @@
             position: absolute;
             bottom: 0px;
             width: 100%;
+            padding-bottom: 2.4%;
             
         }
     }
