--- a/src/pages/FicheLogement.scss
+++ b/src/pages/FicheLogement.scss
@@ -4,6 +4,9 @@
     &__content-flexbox {
         @media (min-width: 768px) { 
         display: flex;
+        justify-content: space-between;
+        margin-top: 24px;
+        margin-bottom: 24px; 
         }
     }
     // &__property-flexbox {
@@ -15,7 +18,9 @@
     margin: 27px 0px 27px 0px;
 
     @media (min-width: 768px) { 
-        margin: 6.944vw 50px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        // margin: 50px 6.944vw;
 
     }
 
@@ -28,6 +33,7 @@
         text-align: left;
         margin-bottom: 5px;
         @media (min-width: 768px) { 
+            margin-top: 6px;
             margin-bottom: 0px;
             font-size: 36px;
             line-height: 51.34px;
@@ -73,6 +79,7 @@
                 min-width: 115px;
                 height: 25px;
                 line-height: 25px;
+                margin-bottom: 0; 
             }
 
         }
@@ -84,18 +91,34 @@
         height: 33px;
         line-height: 33px;
         @media (min-width: 768px) { 
+            height: unset;
             display: flex;
             flex-direction: column;
-            justify-content: right;
+            // justify-content: unset;
+            justify-content: space-evenly;
+            align-items: end;
         }
 
         
         .logement__rating {
             height: 18px;
             min-width: 98px;
+            @media (min-width: 768px) {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 196px;
+                height: 36px;
+                order: 2;
+                text-align: right;
+                // margin-top: 21px;
+                font-size: 1.373em;
+                transform: scaleY(1.093);
+            }
         }
 
         .logement__host {
+            
             display: flex;
             flex-direction: row;
             justify-content: end;
@@ -104,6 +127,7 @@
             width: 135.5px;
             height: 33px;
             @media (min-width: 768px) {
+                order: 1;
                 width: 167px;
                 height: 64px;
             }
@@ -141,6 +165,7 @@
         margin-top: 13px;
         @media (min-width: 768px) {
             flex-direction: row; 
+            margin-top: 0;
             // justify-content: space-between;
             column-gap: 5.278vw;
         }
