--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -11,7 +11,7 @@
         &__cover {
             object-fit: cover;
             width: 100%;
-            height: inherit; // 100% -> 227px ? -_- 
+            height: inherit; 
             border-radius: 10px;
             
         }
