--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -21,34 +21,9 @@
             color: white;
             width: 133.59px;
             text-align: center;
+            @media (min-width: 768px) { 
+                width: 100%;
+                margin-top: 28.56px;
+            }
     }
 }
-// Layout / footer ->
-
-// width: 1440px;
-// height: 209px;
-// padding: 66px 464px 29px 463px;
-// gap: 0px;
-// opacity: 0px;
-
-// text area -> © 2020 Kasa. All rights reserved
-
-// width: 513px;
-// height: 46px;
-// top: 134px;
-// left: 463px;
-// gap: 0px;
-// opacity: 0px;
-// font-family: Montserrat;
-// font-size: 24px;
-// font-weight: 500;
-// line-height: 34.22px;
-// text-align: center;
-
-// Logo -> 
-// width: 122px;
-// height: 39.44px;
-// top: 66px;
-// left: 659px;
-// gap: 0px;
-// opacity: 0px;
