--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,7 +3,7 @@
 .navbar {
     @include flex-between;
     width: 100%;
-    height: 46.88px; // 7vh;
+    height: 46.88px; 
     @media (min-width: 768px) {
         height: 68px; 
         
@@ -11,9 +11,7 @@
 
         &__logo {
             height: 100%;
-            // @media (min-width: 768px) {
-            //     max-height: 68px;                
-            // }
+
         }
 
         &__link {
