--- a/src/pages/FicheLogement.scss
+++ b/src/pages/FicheLogement.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables'; // Probleme de module ; ne trouve pas la stylesheet.
+@import '../styles/variables'; 
 @import '../styles/mixins';
 .logement{
     &__content-flexbox {
@@ -9,9 +9,7 @@
         margin-bottom: 24px; 
         }
     }
-    // &__property-flexbox {
-
-    // }        
+   
 }
 
 .logement {
@@ -20,7 +18,7 @@
     @media (min-width: 768px) { 
         margin-top: 50px;
         margin-bottom: 50px;
-        // margin: 50px 6.944vw;
+       
 
     }
 
@@ -94,7 +92,7 @@
             height: unset;
             display: flex;
             flex-direction: column;
-            // justify-content: unset;
+           
             justify-content: space-evenly;
             align-items: end;
         }
@@ -111,7 +109,7 @@
                 height: 36px;
                 order: 2;
                 text-align: right;
-                // margin-top: 21px;
+                
                 font-size: 1.5em;
                 
             }
@@ -166,7 +164,7 @@
         @media (min-width: 768px) {
             flex-direction: row; 
             margin-top: 0;
-            // justify-content: space-between;
+            
             column-gap: 5.278vw;
         }
         
