--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -8,7 +8,8 @@
     text-align: left;
     line-height: 1.426;
     @media (min-width: 768px) {
-        width: 46.935vw;
+        // width: 46.935vw;
+        max-width: 1240px;
     }
 }
         .collapse {
